<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_layout_list_item"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/blue"
        android:padding="@dimen/m_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/list_item_deposit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/add_current"
                android:src="@drawable/icon_add" />

            <ImageView
                android:id="@+id/list_item_withdraw"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/remove_current"
                android:src="@drawable/icon_remove" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/list_item_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/m_padding"
                    android:layout_marginRight="@dimen/m_padding"
                    android:contentDescription="@string/wish_list_item_image"
                    android:src="@drawable/ic_img_laptop_mac" />

                <TextView
                    android:id="@+id/list_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_title_mock"
                    android:textSize="21sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/x_padding"
                android:paddingLeft="@dimen/x_padding"
                android:paddingRight="@dimen/x_padding"
                android:paddingStart="@dimen/x_padding"
                android:paddingTop="@dimen/m_padding">

                <ProgressBar
                    android:id="@+id/progress"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@android:color/transparent"
                    android:progressTint="@color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp">

                    <TextView
                        android:id="@+id/list_item_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/list_item_wish_start_price_mock" />

                    <TextView
                        android:id="@+id/list_item_target"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/list_item_wish_end_price_mock" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

